# detect_track_qrcode

./: .gitignore  README.md  equalize_img.py  fps.py  hist_backproj.py  hsv_hist.py  kalman_track.py  mog.py  polygon.py  requirements.txt  scan_qr.py  shapedetector.py  track_block.py  track_color.py  tracker.py  vcap.py  video.py
cpp/: .clang_complete  CMakeLists.txt  camera.cpp  camera.hpp  detector.cpp  detector.hpp  helper.cpp  helper.hpp  helper_unittest.cpp  mocktracker.cpp  mocktracker.hpp  test_detect.cpp  testapp.cpp  toy.hpp  toyapp.cpp  tracker.cpp  tracker.hpp  video_cap.cpp
py/: camera.py  detector.py  helper.py  toyapp.py  tracker.py
